<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nashi</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="newsfeed">Newsfeed</string>
	<string name="recommendations">Recommendations</string>
	<string name="friends">Friends</string>
	<string name="online">Online</string>
	<string name="dialogs">Dialogs</string>
	<string name="dark_theme">Dark theme</string>
	<string name="switch_theme">Switch theme</string>
	<string name="post_on_wall">Post on the wall</string>
	<string name="error_label">An error has occurred</string>
	<string name="retry">Retry</string>
	<string name="message">Message</string>
	<string name="themes_store">Themes store</string>
	<string name="audios">Audios</string>
	<string name="my_audios">My audios</string>
	<string name="auth_code_hint">Enter code</string>
	<string name="code">Code</string>
	<string name="all_posts">All posts</string>
	<string name="groups">Groups</string>
	<string name="group">Group</string>
	<string name="all_groups">All groups</string>
	<string name="next">Next</string>
	<string name="friends_count">%d friends</string>
	<string name="followers_count">%d followers</string>
	<string name="closed_account">Private account</string>
	<string name="one_member">%d member</string>
	<string name="member_count">%d members</string>
	<string name="members_count">@string/member_count</string>
	<string name="news_collections">News Collections</string>
	<string name="settings">Settings</string>
	<string name="write">Write</string>
	<string name="donate">Donate</string>
	<string name="videos">Videos</string>
	<string name="all">All</string>
	<string name="more">Show all</string>
	<string name="leave_chat">Leave chat</string>
	<string name="join_chat">Join chat</string>
	<string name="managed">Managed</string>
	<string name="notifications">Notifications</string>
	
	<string-array name="feed_tabs_array">
        <item>@string/all</item>
        <item>@string/friends</item>
        <item>@string/audios</item>
		<item>@string/videos</item>
    </string-array>
</resources>
