<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<com.google.android.material.button.MaterialButton
		android:id="@+id/newsfeed"
		style="@style/Widget.App.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/newsfeed"/>

	<com.google.android.material.button.MaterialButton
		style="@style/Widget.App.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/recommendations"
		android:id="@+id/recommendations"/>

	<com.google.android.material.button.MaterialButton
		style="@style/Widget.App.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/friends"
		android:id="@+id/friends"/>
</merge>

