<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingTop="40dp"
			android:paddingLeft="24dp"
			android:paddingRight="24dp">

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/username"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/username"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/input_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
					android:hint="@string/password"/>

			</com.google.android.material.textfield.TextInputLayout>

			<androidx.appcompat.widget.AppCompatButton
				android:id="@+id/btn_login"
				android:textColor="?attr/background"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:layout_marginBottom="24dp"
				android:padding="12dp"
				android:text="@string/login"
				android:background="@drawable/primary_btn"/>

			<TextView
				android:id="@+id/link_signup"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="24dp"
				android:text="No account yet? Create one"
				android:gravity="center"
				android:textSize="16dip"/>

		</LinearLayout>

	</LinearLayout>
	

